typescript/checker/tests/conformance/parser/ecmascript5/parserObjectCreationArrayLiteral4.ts.stderr
error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            18,
        ),
        hi: BytePos(
            21,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript5/parserObjectCreationArrayLiteral4.ts:1:5
  |
1 | new Foo[1]();
  |     ^^^

